--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="card">
-        <img src="d:\front-end-monetr\social-links-profile-main\design\assets\images\avatar-jessica.jpeg"alt="Jessica Randall">
+        <img src="c:\Users\THINKBOOK\Pictures\avatar-jessica.jpeg alt"alt="Jessica Randall">
         <h1>Jessica Randall</h1>
         <p>London, United Kingdom</p>
         <p2>"Front-end developer and avid reader."</p2>
