--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Profile Card</title>
     
 </head>
-<body>
+<body cz-shortcut-listen>="true">
     <div class="card">
         <img src="c:\Users\THINKBOOK\Pictures\avatar-jessica.jpeg alt"alt="Jessica Randall">
         <h1>Jessica Randall</h1>
