--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Profile Card</title>
     
 </head>
-<body cz-shortcut-listen>="true">
+<body>
     <div class="card">
-        <img src="c:\Users\THINKBOOK\Pictures\avatar-jessica.jpeg alt"alt="Jessica Randall">
+img class="main-card__img"  src="assets/images/avatar-jessica.jpeg" alt="Avatar image"> 
         <h1>Jessica Randall</h1>
         <p>London, United Kingdom</p>
         <p2>"Front-end developer and avid reader."</p2>
