--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="card">
-img class="main-card__img"  src="https://github.com/asmaabassam/social-link-profile-/blob/main/avatar-jessica.jpeg" alt="avatar-jessica.jpeg"> 
+img class="main-card__img"  src="./images/image-avatar-jessica.jpeg" alt="avatar-jessica.jpeg"> 
         <h1>Jessica Randall</h1>
         <p>London, United Kingdom</p>
         <p2>"Front-end developer and avid reader."</p2>
