--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
         <h1>Jessica Randall</h1>
         <p>London, United Kingdom</p>
         <p2>"Front-end developer and avid reader."</p2>
-        <a>GitHub</a>
-        <a>Frontend Mentor</a>
-        <a>LinkedIn</a>
-        <a>Twitter</a>
-        <a>Instagram</a>
+       <div class="links">
+        <ul>
+          <li class="link"><a herf="https://github.com/asmaabassam/social-link-profile-/">GitHub</a></li>
+          <li class="link"><a href="https://www.frontendmentor.io/challenges/social-links-profile-UG32l9m6dQ/hub">Frontend Mentor</a></li>
+          <li class="link"><a href="https://www.linkedin.com/in/asmaa-bassam-3a2468321/">LinkedIn</a></li>
+          <li class="link"><a href="#">Twitter</a></li>
+          <li class="link"><a href="https://www.instagram.com/aeasha_basam?igsh=ZnVqYjN3bm0xMDZ6">Instagram</a></li>
+        </ul>
+      </div>
     </div>
 </body>
 </html>
