--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="card">
 <img class="card" src="./design/images/avatar-jessica.jpeg" alt="avatar-jessica.jpeg"> 
         <h1>Jessica Randall</h1>
-        <p>London, United Kingdom</p>
+        <h2>London, United Kingdom</h2>
         <p2>"Front-end developer and avid reader."</p2>
        <div class="links">
         <ul>
